# pantry

./: .gitignore  Cargo.toml  PKGBUILD  README.md  flake.nix
.github/workflows/: release.yml
doc/: example-bookmarks.toml  example-commands.toml  example-pictures.toml  start.md
docs/: CONTEXT.md
docs/adr/: 001-memory-optimization.md
docs/examples/: example-pictures.toml  start.md
src/: config.rs  constants.rs  items.rs  main.rs  style.css  utils.rs  window_state.rs
src/app/: app.rs  application.rs  event_handlers.rs  item_object.rs  mod.rs  preview_manager.rs  search_logic.rs  ui_builder.rs
src/cache/: mod.rs
src/config/: loader.rs  mod.rs  parser.rs  resolver.rs
src/domain/: item.rs  mod.rs
src/handlers/: executor.rs  filter.rs  loader.rs  mod.rs  selection.rs
src/services/: expansion.rs  item_service.rs  loader.rs  mod.rs  output.rs  pipeline.rs  preview.rs  preview_strategies.rs  process.rs
src/services/preview/: decoder.rs  detector.rs  mem_cache.rs  mod.rs  video.rs
src/ui/: controller.rs  header.rs  item_object.rs  list.rs  match.rs  mod.rs  preview.rs  search.rs  window.rs
