[package]
name = "pantry"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.10"
gdk-pixbuf = "0.21.5"
async-channel = "2.5.0"
walkdir = "2.5.0"
glib = "0.21.5"
rayon = "1.11.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
gio = "0.21.5"
lazy_static = "1.4"
infer = "0.15"
# copypasta = "0.8"
# arboard = "3.4.0"
