[package]
name = "pantry"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.10"
gdk-pixbuf = "0.21.5"
walkdir = "2.5.0"
glib = "0.21.5"
rayon = "1.11.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
gio = "0.21.5"
atty = "0.2"
once_cell = "1.20.2"
tempfile = "3.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
filetime = "0.2"
