[package]
name = "pantry"
version = "0.4.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.10", features = ["v4_12"] }
gdk-pixbuf = "0.21.5"
walkdir = "2.5.0"
glib = "0.21.5"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"
clap = { version = "4.0", features = ["derive"] }
gio = "0.21.5"
tempfile = "3.13"
image = { version = "0.25", default-features = false, features = ["gif"] }
libc = "0.2"
lz4_flex = "0.11"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
filetime = "0.2"
